support BigInteger in IntRange comparisons
git-svn-id: http://svn.codehaus.org/groovy/trunk/groovy/groovy-core@4753 a5544e8c-8a19-0410-ba12-f9af4593a198